Set default height of images to auto, to prevent squashing.
(Also removed useless comments.)

--- a/src/base/css/raw/_honeycomb.base.raw.images.scss
+++ b/src/base/css/raw/_honeycomb.base.raw.images.scss
@@ -2,22 +2,11 @@
     #IMAGES
 \*------------------------------------*/
 
-/**
- * Basic styles for raw unclassed images.
- */
-
-
-/**
-* 1. Fluid images for responsive purposes.
-* 2. Offset `alt` text from surrounding copy.
-* 3. Setting `vertical-align` removes the whitespace that appears under `img`
-*    elements when they are dropped into a page as-is. Safer alternative to
-*    using `display: block;`.
-*/
 img {
-  max-width: 100%; /* [1] */
-  font-style: italic; /* [2] */
-  vertical-align: middle; /* [3] */
+    max-width: 100%;
+    height: auto;
+    font-style: italic;
+    vertical-align: middle;
 }
 
 /**
@@ -25,10 +14,5 @@ img {
 * to remove the effects.
 */
 .gm-style img {
-  max-width: none;
+    max-width: none;
 }
-
-
-
-
-
